# unified-search-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.example.yaml  install.sh
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  IMPLEMENTATION_PLAN.md  PHASE_PLAN.md  TEST_PLAN.md
fixtures/config/: invalid_syntax.yaml  missing_env_var.yaml  valid_full.yaml  valid_minimal.yaml
fixtures/confluence/: health_success.json  page_comments.json  page_detail.json  search_auth_failure.json  search_empty.json  search_forbidden.json  search_malformed.json  search_server_error.json  search_success.json
fixtures/jira/: issue_detail.json  search_auth_failure.json  search_empty.json  search_success.json  search_with_comments.json
fixtures/slack/: conversation_history.json  conversation_info.json  conversation_replies.json  search_messages_empty.json  search_messages_rate_limited.json  search_messages_success.json
investigations/: perf-review-2026-04-08.md
src/: cache.rs  config.rs  core.rs  lib.rs  main.rs  mcp.rs  metrics.rs  models.rs  resolve.rs  server.rs  stats.rs  verify.rs
src/sources/: confluence.rs  confluence_markdown.rs  github.rs  jira.rs  local_text.rs  mod.rs  slack.rs
tests/: test_cache.rs  test_config.rs  test_confluence.rs  test_confluence_markdown.rs  test_core.rs  test_github.rs  test_integration.rs  test_jira.rs  test_local_text.rs  test_metrics.rs  test_models.rs  test_resolve.rs  test_server.rs  test_slack.rs
tests/common/: mod.rs
(+7 files in other folders)
